# geometric-smote

./: .copier-answers.yml  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  appveyor.yml  binmetrics.py  circle.yml  environment.yml  mkdocs.yml  noxfile.py  pyproject.toml  requirements.code.txt  requirements.txt  setup.py
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: ci-docs.yml  ci.yml  doc.yml
conda-recipe/: conda_deployment.sh
conda-recipe/geometric-smote/: meta.yaml
doc/: conf.py  examples.rst  gsmote.rst  gsmote_and_smote.rst  gsmote_with_remote_sensing_data.rst  index.rst  install.rst  introduction.rst  release_history.rst  user_guide.rst
doc/_templates/: class.rst
doc/additional-information/: about.rst  release_history.rst  whats_new.rst
doc/documentation/: api.rst  gsmote.rst  introduction.rst  user_guide.rst
doc/getting-started/: install.rst
doc/tutorial-examples/: examples.rst
docs/: generate_api.py
docs/examples/: README.md  plot_cluster_oversamplers.py  plot_data_generation_mechanism.py  plot_gsmote_data_generation.py  plot_gsmote_validation_curves.py  plot_kmeans_smote.py  plot_validation_curves.py
docs/examples/applications/: README.md  plot_mnist_example.py
docs/overview/: user_guide.md
examples/: README.txt  classification.ipynb  experiment.p  extended_experiment.ipynb  forest_covertypes_classification_with_gsmote.py  hyperspectral_image_classification_with_gsmote.py  imbalanced-simulated-data.ipynb  plot_data_generation_mechanism.py  plot_gsmote_and_smote_visualisation.py  plot_gsmote_decision_boundary_comparison.py  plot_model_search_results.py  plot_oversamplers_comparison.py  plot_stacked_regression.py  plot_superlearner_regression.py  plot_validation_curves.py  resampling_experiment.ipynb
examples/Applications/: hyperspectral_image_classification_with_gsmote.py
examples/applications/: README.txt  forest_covertypes_classification_with_gsmote.py  hyperspectral_image_classification_with_gsmote.py  plot_hyperspectral_image_classification_with_gsmote.py  plot_mnist_example.py  plot_remote_sensing_example.py
examples/tools/: plot_model_search_results.py
gsmote/: __init__.py  geometric_smote.py
gsmote/tests/: test_geometric_smote.py
hyperlearn/: analysis.py  experiment.py  utils.py
imbalanced-tools/imbtools/: analysis.py  metrics.py  utils.py
imbalanced-tools/imbtools/algorithms/: __init__.py
imbtools/: __init__.py  analysis.py  evaluation.py  experiment.py  export.py  metrics.py  utils.py
imbtools/algorithms/: cgan_oversampler.py  ganetwork.py  geometric_smote.py  gmote.py
imbtools/metrics/: binmetrics.py
metric-learn/examples/: classification.ipynb
metric-learn/metriclearn/: __init__.py  classification.py
oversampling-learn/: setup.py
oversampling-learn/examples/: gsmote.ipynb
sklearn-extensions/ensemble/: base.py  metalearners.py
sklearn-extensions/hyperlearn/: experiment.py  utils.py
sklearn-extensions/imbalanced-tools/: README.rst
sklearn-extensions/imbalanced-tools/imbtools/: experiment.py
sklearn-extensions/metric-learn/: LICENSE  README.rst  setup.py
sklearn-extensions/metric-learn/metriclearn/: regression.py
sklearn-extensions/oversampling-learn/: README.rst
sklearn-extensions/preprocessing/: cgan_oversampler.py
sklearn-extensions/stack-learn/: README.rst  requirements.txt
sklearn-extensions/stack-learn/examples/: plot_iris.py
sklearn-extensions/stack-learn/notebooks/: metalearners_nb.ipynb
sklearn_extensions/ensemble/: validation.py
sklearn_extensions/ensemble/tests/: test_metafeatures.py
sklearn_extensions/optimization/: requirements.txt  setup.py
sklearn_extensions/preprocessing/: __init__.py  cgan_oversampler.py  geometric_smote.py
sklearn_extensions/utils/: __init__.py  validation.py
sklearnext/cluster/: __init__.py  _clusterers.py  som.py
sklearnext/cluster/tests/: test_som.py
sklearnext/experiment_tools/: analysis.py
sklearnext/metrics/: __init__.py  classification.py  regression.py
sklearnext/model_selection/: __init__.py  search.py  split.py
sklearnext/over_sampling/: __init__.py  _oversamplers.py  base.py  cgan_oversampler.py  dbscan_smote.py  distribution.py  geometric_smote.py  kmeans_smote.py  somo.py
sklearnext/preprocessing/: __init__.py  data.py
sklearnext/tools/: __init__.py  imbalanced_analysis.py  model_analysis.py
sklearnext/utils/: __init__.py  estimators.py  validation.py
src/gsmote/: geometric_smote.py
src/imblearn_extra/: __init__.py
stack-learn/: .travis.yml  LICENSE  MANIFEST.in
stack-learn/examples/: README.txt
stack-learn/notebooks/: metafeatures_nb.ipynb
stack-learn/stacklearn/: metafeatures.py  utils.py
tests/: __init__.py  test_geometric_smote.py
tests/clover/: __init__.py
tests/gsmote/: test_geometric_smote.py
(+67 files in other folders)
