[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "imbalanced-learn-extra"
description = "An implementation of novel oversampling algorithms."
authors = [{name = "Georgios Douzas", email = "gdouzas@icloud.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10, <3.13"
keywords = ["machine learning", "imbalanced learning", "oversampling"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "scipy>=1.7.2",
    "numpy>=1.22",
    "scikit-learn>=1.3.2",
    "imbalanced-learn>=0.11.0",
    "MiniSom>=2.3.2",
    "typing-extensions>=4.8.0",
]

[project.urls]
Homepage = "https://georgedouzas.github.io/imbalanced-learn-extra"
Documentation = "https://georgedouzas.github.io/imbalanced-learn-extra"
Changelog = "https://georgedouzas.github.io/imbalanced-learn-extra/changelog"
Repository = "https://github.com/georgedouzas/imbalanced-learn-extra"
Issues = "https://github.com/georgedouzas/imbalanced-learn-extra/issues"
Discussions = "https://github.com/georgedouzas/imbalanced-learn-extra/discussions"
Gitter = "https://gitter.im/imbalanced-learn-extra/community"
Funding = "https://github.com/sponsors/georgedouzas"

[tool.pdm]
version = {source = "scm"}
build = {package-dir = "src", editable-backend = "editables"}

[tool.pdm.scripts]
clean = {shell = """rm -rf .mypy_cache .pytest_cache tests/.pytest_cache build dist \
htmlcov pip-wheel-metadata site __pycache__ docs/generated .nox .ruff_cache pdm.lock \
&& find . -type d -name __pycache__ | xargs rm -rf \
&& find . -name '*.rej'  -delete \
&& find . -name '.coverage*'  -delete"""}
docs = "nox --error-on-external-run -R -s docs -- {args:serve}"
formatting = "nox --error-on-external-run -R -s formatting -- {args:all}"
checks = "nox --default-venv-backend uv --error-on-external-run -R -s checks -- {args:all}"
tests = "nox --default-venv-backend uv --error-on-external-run -R -s tests"
changelog = "nox --error-on-external-run -R -s changelog"
release = "nox --error-on-external-run -R -s release"

[tool.pdm.dev-dependencies]
maintenance = [
    "nox[uv]>=2024.4.15",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-coverage>=1.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.27",
    "mkdocs-gallery>=0.10.1",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings[python]>=0.25.1",
    "markdown-callouts>=0.4.0",
    "markdown-exec>=1.9.3",
    'pandas>=2.2.2',
]
formatting = [
    "black>=24.4.2",
    "docformatter>=1.7.5",
]
checks = [
    "ruff>=0.5.0",
    "safety>=3.2.3",
    "mypy>=1.10.1",
    "types-markdown>=3.6.0.20240316",
    "types-toml>=0.10.8.20240310",
]
tests = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-randomly>=3.15.0",
    "pytest-xdist>=3.6.1",
]
changelog = [
    "git-changelog>=2.5.2",
]
release = [
    "twine>=5.1.1",
]

[tool.black]
line-length = 120
extend-exclude = "(tests/fixtures|docs/generated)"
skip-string-normalization = true

[tool.docformatter]
in-place = true
recursive = true
close-quotes-on-newline = true
wrap-descriptions = 120

[tool.ruff]
extend-exclude = ["docs/generated"]
force-exclude = true
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = ["D202", "N806", "N803", "S101", "INP001", "Q000", "TRY002", "PLR0913", "EXE001", "EXE002", "E741"]
select = ["C", "E", "F", "W", "B", "I", "D", "N", "UP", "YTT", "ANN", "S",
"BLE", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G",
"INP", "PIE", "T20", "PT", "Q", "RET501", "RET502", "RET503", "SIM",
"PTH", "PD", "PGH", "PL", "TRY", "RUF", "PLE", "PLR", "PLW", "TRY", "RUF"]

[tool.ruff.lint.per-file-ignores]
"docs/examples/*" = ["ANN", "D", "B018"]
"docs/generated/*" = ["ANN", "D"]
"test_*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
ignore_missing_imports = true
exclude = ["tests/fixtures/", "docs/examples/", "docs/generated/"]
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "--cov"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src", "tests"]

[tool.coverage.paths]
equivalent = ["src", "__pypackages__"]

[tool.coverage.report]
precision = 2
omit = ["src/*/__init__.py", "tests/__init__.py"]

[tool.coverage.json]
output = "htmlcov/coverage.json"
